# facilguide-python

./: README.md  index.html  pyproject.toml
docs/: api.rst  conf.py  guides.rst  index.rst  installation.rst
src/facil/: __init__.py  data.py
src/facilguide.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
